--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,9 @@
 
     <div class="container">
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+
+    <% a = 3+5 %>
+    <p>Welcome to <%= title %> <%= a%></p>
 
   
 
