--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -30,6 +30,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/probando">probando</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/middleware">mid-peter</a>
+              </li>
             </ul>
             <span style="margin-right: 140px;">
                 <button type="button" class="btn btn-primary">Primary</button>
