primer cambio ramanueva

--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="/probando">probando</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/middleware">mid-peter</a>
+                <a class="nav-link" href="/middleware">midle-peter</a>
               </li>
             </ul>
             <span style="margin-right: 140px;">
