cambios 1 febrero 2022 final y terminado

--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -11,8 +11,9 @@
 
 
 
-<div class="col-sm-12 col-md-12 col-lg-6">
+<div class="col-sm-12 col-md-12 col-lg-4">
   <div class="card mb-2" >
+    <img height="300px" src="<%=Libros[i].imagen  %>" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title"><%=Libros[i].titulo  %></h5>
       <p class="card-text"><%=Libros[i].descripcion%></p>
